src/2048/2048-services.yml
apiVersion: v1
kind: Service
metadata:
  name: web2048
  namespace: web2048
spec:
  selector:
    app: web2048
  ports:
  - port: 80
    targetPort: 80
