src/2048/2048-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web2048
  namespace: web2048
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web2048
              port:
                number: 80
